--- a/src/components/thumbnail/thumbnail.css
+++ b/src/components/thumbnail/thumbnail.css
@@ -1,7 +1,6 @@
 .thumbnail_wrapper {
-    width: 24%;
-    margin-right: 0.5%;
-    margin-left:0.5%;
+    max-width: 216px;
+    margin-right: 1%;
     float:left;
     margin-top: 15px;
     height: 300px;
